# goring

./: .env  .gitignore  AUTHENTICATION.md  Cargo.toml  LICENSE  PAYMENT_INTEGRATION.md  README.md  SUPABASE_SETUP.md  Shuttle.toml  _redirects  advanced_scoring.py  github_score_model.py  netlify.toml  package-lock.json  package.json  subscriptions_table.sql  supabase_searches_table.sql  svelte.config.js  vercel.json  vite.config.js.timestamp-1748355156013-20787ff2eb5a8.mjs  vite.config.ts
.github/workflows/: deploy.yml
api/: main.py  requirements.txt
src/: app.css  app.d.ts  app.html  hooks.server.ts  lib.rs
src/api/: main.rs
src/db/: db.rs  mod.rs  models.rs
src/lib/: config.ts  supabase.server.ts  supabaseClient.ts  types.ts
src/lib/components/: ComparisonView.svelte  Footer.svelte  Layout.svelte  LoginModal.svelte  ScoreBreakdown.svelte  SearchHistory.svelte  SearchLimit.svelte  SubscriptionStatusPopup.svelte  UserContributions.svelte  UserRepositories.svelte  UserStats.svelte  UsernameAutocomplete.svelte
src/lib/supabase/: client.ts  server.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
src/routes/api/search-history/: +server.ts
src/routes/api/search-limit/: +server.ts
src/routes/api/subscriptions/create/: +server.ts
src/routes/api/subscriptions/details/: +server.ts
src/routes/api/webhooks/paypal/: +server.ts
src/routes/auth/callback/: +page.svelte  +server.ts
src/routes/auth/github/: +server.ts
src/routes/auth/google/: +server.ts
src/routes/blog/: +page.svelte
src/routes/blog/understanding-github-scoring/: +page.svelte
src/routes/compare/: +page.svelte
src/routes/dashboard/: +page.server.ts  +page.svelte
src/routes/login/: +page.svelte
src/routes/pricing/: +layout.svelte  +page.svelte
src/routes/roadmap/: +layout.svelte  +page.svelte
src/routes/subscription/confirm/: +page.svelte
src/routes/subscription/success/: +page.svelte
src/routes/trending/: +page.svelte
src/scoring/: github_score.rs  lib.rs  mod.rs
