[package]
name = "github-score-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
futures = "0.3"

[lib]
name = "scoring"
path = "src/scoring/lib.rs"

[[bin]]
name = "github-score-api"
path = "src/api/main.rs" 